# min-api

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  Conan.md  ReadMe.md  conanfile.py
.github/workflows/: test.yml
doc/: GuideToAudio.md  GuideToInitialization.md  GuideToSpecialMethods.md  GuideToThreading.md  GuideToWritingObjects.md  SpecialMethods.md  WhereToLook.md  doxyfile.in
docs/: GuideToWritingObjects.md  index.html  index.md
examples/min.conan/: CMakeLists.txt
examples/min.example/: CMakeLists.txt
include/: c74_lib_filters.h  c74_lib_misc.h  c74_lib_string.h  c74_min.h  c74_min_accessories.h  c74_min_accessories_easing.h  c74_min_api.h  c74_min_argument.h  c74_min_atom.h  c74_min_attribute.h  c74_min_attribute_impl.h  c74_min_buffer.h  c74_min_buffer_impl.h  c74_min_catch.h  c74_min_clock.h  c74_min_dataspace.h  c74_min_dataspace_gain.h  c74_min_dataspace_none.h  c74_min_dataspace_time.h  c74_min_dictionary.h  c74_min_doc.h  c74_min_event.h  c74_min_flags.h  c74_min_graphics.h  c74_min_impl.h  c74_min_inlet.h  c74_min_limit.h  c74_min_logger.h  c74_min_map.h  c74_min_message.h  c74_min_method.h  c74_min_notification.h  c74_min_object.h  c74_min_object_audio.h  c74_min_object_components.h  c74_min_object_matrix.h  c74_min_object_wrapper.h  c74_min_operator_gl.h  c74_min_operator_matrix.h  c74_min_operator_mc.h  (+17 more)
script/: c74_add_min_target.cmake  c74_set_target_xcode_warning_flags.cmake  min-package.cmake  min-posttarget.cmake  min-pretarget.cmake  pre-commit
test/: CMakeLists.txt  UnitTest.cmake  c74_add_min_unit_test.cmake  limit.cpp  main.cpp  min-api-unittest.cmake  min-object-unittest.cmake
test/atom/: atom_test.cpp
test/limit/: limit_test.cpp
test/mock/: CMakeLists.txt  c74_mock.cpp  c74_mock.h  c74_mock_atoms.h  c74_mock_classes.h  c74_mock_clock.h  c74_mock_dictionary.h  c74_mock_inlets.h  c74_mock_kernel.h  c74_mock_memory.h  c74_mock_misc.h  c74_mock_msp.h  c74_mock_outlets.h
test/object/: CMakeLists.txt  object_test.cpp
test/symbol/: CMakeLists.txt  symbol_test.cpp  test_symbol.cpp
